--- a/client/src/app/components/chatroom/chatroom.component.css
+++ b/client/src/app/components/chatroom/chatroom.component.css
@@ -254,15 +254,13 @@
 
 /* ----------------------- Right ( contact thread ) ----------------------*/
 #navbar-right {
-  display: -webkit-flex;
-  display: -ms-flex;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
 }
+
 #navbar-right a {
-  border: 0;
   padding: 0.5vh 2vh;
-  margin-right: 1vh;
+  margin: 0 1vh;
   font-size: 2vh;
   cursor: pointer;
   font-weight: bolder;
